# tree-sitter-objecttext

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test.txt  tree-sitter.json
bindings/c/: tree-sitter-objecttext.pc.in
bindings/c/tree_sitter/: tree-sitter-objecttext.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_objecttext/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterObjecttextTests/: TreeSitterObjecttextTests.swift
queries/objecttext/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: barestring.txt  main.txt
